Moved Lisp engine makefile to a more sensible location.

--- a/lisp/makefile
+++ b/lisp/makefile
@@ -1,13 +1,13 @@
 CFLAGS += -DMMEM_CONF_SIZE=512
 
-OBJECTS =  unix/lisp_engine.o unix/io_buffer.o
-OBJECTS += lisp/expression.o lisp/parser.o lisp/primitives.o
-OBJECTS += memory/list.o memory/mmem.o 
+OBJECTS =  ../unix/lisp_engine.o ../unix/io_buffer.o
+OBJECTS += expression.o parser.o primitives.o
+OBJECTS += ../memory/list.o ../memory/mmem.o 
 
 lisp_engine:	$(OBJECTS)
 	gcc $^ -o $@
 
-$(OBJECTS):	lisp/lisp_engine.h memory/list.h memory/mmem.h
+$(OBJECTS):	lisp_engine.h ../memory/list.h ../memory/mmem.h
 
 clean:
 	-rm -f $(OBJECTS)
