--- a/lisp/makefile
+++ b/lisp/makefile
@@ -1,6 +1,6 @@
 CFLAGS += -DMMEM_CONF_SIZE=512
 
-OBJECTS =  ../unix/lisp_engine.o ../unix/io_buffer.o
+OBJECTS =  unix/lisp_engine.o unix/io_buffer.o
 OBJECTS += expression.o parser.o primitives.o
 OBJECTS += ../memory/list.o ../memory/mmem.o 
 
