--- a/examples/esp8266/aiko_server/Makefile
+++ b/examples/esp8266/aiko_server/Makefile
@@ -49,6 +49,8 @@ LIBS		= c gcc hal pp phy net80211 lwip wpa main
 CFLAGS		= -Os -g -O2 -Wpointer-arith -Wundef -Werror -Wl,-EL -fno-inline-functions -nostdlib -mlongcalls -mtext-section-literals  -D__ets__ -DICACHE_FLASH
 # Compile stdint.h cleanly ...
 CFLAGS		+= -DTENSILICA=0 -D__have_long64=0 -D__int_fast64_t_defined=1
+# Lisp engine heap memory allocation
+CFLAGS		+= -DMMEM_CONF_SIZE=512
 
 # linker flags used to generate the main object file
 LDFLAGS		= -nostdlib -Wl,--no-check-sections -u call_user_start -Wl,-static
