Minimize Lisp engine heap memory usage on ESP8266.

--- a/examples/esp8266/aiko_server/Makefile
+++ b/examples/esp8266/aiko_server/Makefile
@@ -50,7 +50,7 @@ CFLAGS		= -Os -g -O2 -Wpointer-arith -Wundef -Werror -Wl,-EL -fno-inline-functio
 # Compile stdint.h cleanly ...
 CFLAGS		+= -DTENSILICA=0 -D__have_long64=0 -D__int_fast64_t_defined=1
 # Lisp engine heap memory allocation
-CFLAGS		+= -DMMEM_CONF_SIZE=512
+# CFLAGS	+= -DMMEM_CONF_SIZE=512
 
 # linker flags used to generate the main object file
 LDFLAGS		= -nostdlib -Wl,--no-check-sections -u call_user_start -Wl,-static
