--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,10 @@ include/aiko_version.h
 
 # Executables
 aiko_engine
-aiko_configure
 aiko_server
 aiko_timer
 aiko_udp
+wifi_configure
 *.exe
 *.out
 *.app
